lintian-brush (0.21) UNRELEASED; urgency=medium

  * Use vcswatch-like regex to find salsa.debian.org.
  * Support suggesting Vcs-* URLs based on vcswatch.
  * Avoid adding unnecessary spacing when removing first dependency from
    a control field.
  * Don't print confusing warning message about directories under
    debian/patches/.
  * Add fixer for vcs-field-bitrotted.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 22:50:11 +0000

lintian-brush (0.20) unstable; urgency=medium

  * Fix lintian-brush when pyinotify is not installed.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 20:28:30 +0000

lintian-brush (0.19) unstable; urgency=medium

  * Run python fixers in-process, to avoid Python interpreter and module
    loading overhead. This provides a ~30% performance improvement for
    some packages.
  * Add fixer for debhelper-tools-from-autotools-dev-are-deprecated.
  * Set User-Agent when sending HTTP requests.
  * Add fixer for vcs-obsolete-in-debian-infrastructure.
  * Check that the tree is clean before running fixers, rather than
    before each fixer.
  * Use inotify (where available) to track changes to the tree as all fixers
    are processed. This significantly speeds up runs on
    large repositories. Closes: #933777
  * Don't add both debhelper-compat and debhelper build-depends.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 20:22:35 +0000

lintian-brush (0.18) unstable; urgency=medium

  * Fix copyright fields before parsing with python-debian.
  * Add fixer for dh-clean-k-is-deprecated.
  * Handle missing bugtracker/web subkey for META.json files.
  * Upgrade debian/rules in some cases when updating to debhelper 12.
  * Don't remove debian/patches/README.
  * Use the 'Source' field in copyright files when looking for possible
    upstream repositories.
  * Don't worry about preserving all formatting for YAML files; comments
    and indentation are already preserved.