@@ -1,0 +1,2 @@
+Use canonical URL in Vcs-Browser.
+Fixed-Lintian-Tags: vcs-field-not-canonical
