@@ -7,6 +7,7 @@ lintian-brush (0.21) UNRELEASED; urgency=medium
   * Don't print confusing warning message about directories under
     debian/patches/.
   * Add fixer for vcs-field-bitrotted.
+  * Add fixer for vcs-field-not-canonical.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 03 Aug 2019 22:50:11 +0000
 
